--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':vendor:Sack:sack')
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.squareup.picasso:picasso:2.3.4'
-    compile project(':vendor:Sack:sack')
+    compile 'com.android.support:support-v4:20.0.0'
 }
