--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+
         <service android:name=".ArchiveService" />
 
-        <activity android:name=".ArchiveActivity" >
+        <activity android:name=".ArchiveActivity" android:theme="@android:style/Theme.NoDisplay" android:noHistory="true" android:excludeFromRecents="true" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="text/plain" />
@@ -26,17 +26,17 @@
         </activity>
         <activity
             android:name=".IndexActivity"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ViewerActivity"
             android:label="@string/title_activity_viewer"
-            android:theme="@style/ViewerTheme" >
+            android:theme="@style/ViewerTheme"
+            android:immersive="true">
         </activity>
     </application>
 
