--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.0'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
 }
 
 task askForPasswords << {
