--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,18 @@
 apply plugin: 'com.android.application'
 
 
+def getVersionCode = { ->
+    def code = project.hasProperty('versionCode') ? versionCode.toInteger() : -1
+    println "VersionCode is set to $code"
+    return code
+}
+
+def getVersionName = { ->
+    def name = project.hasProperty('versionName') ? versionName : ""
+    println "VersionName is set to $name"
+    return name
+}
+
 android {
     compileSdkVersion 21
     buildToolsVersion "21.0.2"
@@ -9,8 +21,8 @@ android {
         applicationId "org.quuux.knapsack"
         minSdkVersion 11
         targetSdkVersion 21
-        versionCode project.hasProperty('versionCode') ? versionCode.toInteger() : -1
-        versionName project.hasProperty('versionName') ? versionName : ""
+        versionCode getVersionCode()
+        versionName getVersionName()
     }
     signingConfigs {
         release {
