--- a/knapsack-backend/development.ini
+++ b/knapsack-backend/development.ini
@@ -17,6 +17,10 @@ pyramid.includes =
 
 sqlalchemy.url = sqlite:///%(here)s/knapsack-backend.sqlite
 
+mako.directories = knapsackbackend:templates
+
+reload_templates = true
+
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
