--- a/knapsack-backend/production.ini
+++ b/knapsack-backend/production.ini
@@ -14,7 +14,11 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
+reload_templates = true
+
 sqlalchemy.url = sqlite:///%(here)s/knapsack-backend.sqlite
+
+mako.directories = knapsackbackend:templates
 
 [server:main]
 use = egg:waitress#main
