--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     defaultConfig {
         applicationId "org.quuux.knapsack"
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode getVersionCode()
         versionName getVersionName()
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.melnykov:floatingactionbutton:1.0.7'
 }
 
 task askForPasswords << {
