--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,10 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'com.melnykov:floatingactionbutton:1.0.7'
-    compile 'com.getbase:floatingactionbutton:1.8.0'
+    compile 'jp.wasabeef:recyclerview-animators:1.1.2@aar'
 }
 
 task askForPasswords << {
