--- a/backend/production.ini
+++ b/backend/production.ini
@@ -16,14 +16,10 @@ pyramid.includes =
 
 reload_templates = true
 
-sqlalchemy.url = sqlite:///%(here)s/knapsack-backend.sqlite
+sqlalchemy.url = postgresql:///knapsack
 
 mako.directories = knapsackbackend:templates
 
-[server:main]
-use = egg:waitress#main
-host = 0.0.0.0
-port = 6543
 
 ###
 # logging configuration
