--- a/backend/production.ini
+++ b/backend/production.ini
@@ -16,7 +16,7 @@ pyramid.includes =
 
 reload_templates = true
 
-sqlalchemy.url = postgresql:///knapsack
+sqlalchemy.url = postgresql://knapsack:knapsack@database/knapsack
 
 mako.directories = knapsackbackend:templates
 
