--- a/KnapsackApp/app/build.gradle
+++ b/KnapsackApp/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.7.5'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.5.0'
     compile 'com.squareup:otto:1.3.8'
 
     compile 'jp.wasabeef:recyclerview-animators:1.1.2@aar'
