pagination, tests, docker

--- a/backend/Dockerfile-dev
+++ b/backend/Dockerfile-dev
@@ -1,13 +1,14 @@
-
 FROM ubuntu
 MAINTAINER Marc DellaVolpe "marc.dellavolpe@gmail.com"
+
+VOLUME /site
 
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN useradd -ms /bin/bash knapsack
 
 RUN apt-get update
-RUN apt-get install -y python python-dev python-setuptools python-pip uwsgi uwsgi-plugin-python libpq-dev git
+RUN apt-get install -y python python-dev python-setuptools python-pip git libpq-dev
 
 COPY requirements.txt /tmp
 RUN pip install -r /tmp/requirements.txt
@@ -16,13 +17,9 @@ RUN rm /tmp/requirements.txt
 RUN apt-get purge -y git
 RUN apt-get autoremove -y
 
-RUN mkdir /site
-COPY production.ini /site/knapsack.ini
-COPY knapsack.lockbox /site
-
-USER knapsack
 ENV HOME /site
 ENV PYTHON_EGG_CACHE /tmp/python-eggs
 WORKDIR /site
 
-CMD ["uwsgi", "--plugin", "python", "--paste", "config:/site/knapsack.ini" , "-s", "0.0.0.0:3100", "--master", "--workers", "3"]
+ENV PYTHONPATH=/site
+CMD ["pserve", "--reload", "development.ini"]
