--- a/backend/production.ini
+++ b/backend/production.ini
@@ -20,6 +20,7 @@ sqlalchemy.url = postgresql://knapsack:knapsack@database/knapsack
 
 mako.directories = knapsackbackend:templates
 
+lockbox_path = %(here)s/knapsack.lockbox
 
 ###
 # logging configuration
