--- a/KnapsackApp/app/build.gradle
+++ b/KnapsackApp/app/build.gradle
@@ -15,7 +15,7 @@ def getVersionName = { ->
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
 
