--- a/backend/development.ini
+++ b/backend/development.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/environment.html
 ###
 
-[app:main]
+[app:knapsack]
 use = egg:knapsack-backend
 
 pyramid.reload_templates = true
@@ -21,9 +21,20 @@ mako.directories = knapsackbackend:templates
 
 reload_templates = true
 
+lockbox_path = %(here)s/knapsack.lockbox
+
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
+
+
+[filter:translogger]
+use = egg:Paste#translogger
+setup_console_handler = False
+
+[pipeline:main]
+pipeline = translogger
+           knapsack
 
 ###
 # wsgi server configuration
@@ -40,7 +51,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, knapsackbackend, sqlalchemy
+keys = root, knapsackbackend, sqlalchemy, waitress
 
 [handlers]
 keys = console
@@ -64,6 +75,11 @@ qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
+
+[logger_waitress]
+level = INFO
+qualname = waitress
+handlers =
 
 [handler_console]
 class = StreamHandler
