--- a/backend/development.ini
+++ b/backend/development.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:knapsack]
-use = egg:knapsack-backend
+use = egg:knapsack
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
@@ -15,9 +15,9 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
-sqlalchemy.url = sqlite:///%(here)s/knapsack-backend.sqlite
+sqlalchemy.url = sqlite:///%(here)s/knapsack.sqlite
 
-mako.directories = knapsackbackend:templates
+mako.directories = knapsack:templates
 
 reload_templates = true
 
@@ -51,7 +51,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, knapsackbackend, sqlalchemy, waitress
+keys = root, knapsack, sqlalchemy, waitress
 
 [handlers]
 keys = console
@@ -63,10 +63,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_knapsackbackend]
+[logger_knapsack]
 level = DEBUG
 handlers =
-qualname = knapsackbackend
+qualname = knapsack
 
 [logger_sqlalchemy]
 level = INFO
