--- a/backend/production.ini
+++ b/backend/production.ini
@@ -4,7 +4,7 @@
 ###
 
 [app:main]
-use = egg:knapsack-backend
+use = egg:knapsack
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
@@ -18,7 +18,7 @@ reload_templates = true
 
 sqlalchemy.url = postgresql://knapsack:knapsack@database/knapsack
 
-mako.directories = knapsackbackend:templates
+mako.directories = knapsack:templates
 
 lockbox_path = %(here)s/knapsack.lockbox
 
@@ -28,7 +28,7 @@ lockbox_path = %(here)s/knapsack.lockbox
 ###
 
 [loggers]
-keys = root, knapsackbackend, sqlalchemy
+keys = root, knapsack, sqlalchemy
 
 [handlers]
 keys = console
@@ -40,10 +40,10 @@ keys = generic
 level = WARN
 handlers = console
 
-[logger_knapsackbackend]
+[logger_knapsack]
 level = WARN
 handlers =
-qualname = knapsackbackend
+qualname = knapsack
 
 [logger_sqlalchemy]
 level = WARN
