--- a/backend/development.ini
+++ b/backend/development.ini
@@ -13,9 +13,9 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
-    pyramid_tm
 
 sqlalchemy.url = sqlite:///%(here)s/knapsack.sqlite
+sqlalchemy.echo = true
 
 mako.directories = knapsack:templates
 
