--- a/backend/production.ini
+++ b/backend/production.ini
@@ -3,7 +3,7 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/environment.html
 ###
 
-[app:main]
+[app:knapsack]
 use = egg:knapsack
 
 pyramid.reload_templates = false
@@ -13,13 +13,23 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
 
-reload_templates = true
+reload_templates = false
 
 sqlalchemy.url = postgresql://knapsack:knapsack@database/knapsack
 
 mako.directories = knapsack:templates
 
 lockbox_path = %(here)s/knapsack.lockbox
+
+
+[filter:translogger]
+use = egg:Paste#translogger
+setup_console_handler = False
+
+[pipeline:main]
+pipeline = translogger
+           knapsack
+
 
 ###
 # logging configuration
