--- a/web/package.json
+++ b/web/package.json
@@ -1,11 +1,18 @@
 {
-    "name": "knapsack",
-    "version": "1.0.0",
-    "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0",
-        "grunt-contrib-cssmin": "~0.10.0"
+  "name": "knapsack",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "react-scripts": "0.9.0"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
