--- a/backend/development.ini
+++ b/backend/development.ini
@@ -27,8 +27,18 @@ lockbox_path = %(here)s/knapsack.lockbox
 use = egg:Paste#translogger
 setup_console_handler = False
 
+[filter:cors]
+use = egg:wsgicors#middleware
+policy=free
+free_origin=copy
+free_headers=*
+free_methods=*
+free_maxage=180
+free_credentials=true
+
 [pipeline:main]
 pipeline = translogger
+           cors
            knapsack
 
 ###
