--- a/backend/production.ini
+++ b/backend/production.ini
@@ -17,13 +17,22 @@ sqlalchemy.url = postgresql://knapsack:knapsack@database/knapsack
 
 lockbox_path = %(here)s/knapsack.lockbox
 
-
 [filter:translogger]
 use = egg:Paste#translogger
 setup_console_handler = False
 
+[filter:cors]
+use = egg:wsgicors#middleware
+policy=free
+free_origin=copy
+free_headers=*
+free_methods=*
+free_maxage=180
+free_credentials=true
+
 [pipeline:main]
 pipeline = translogger
+           cors
            knapsack
 
 
