--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "bootstrap": "^3",
+    "jquery": "^3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
