--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^3",
     "jquery": "^3",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2"
   },
   "scripts": {
