--- a/backend/production.ini
+++ b/backend/production.ini
@@ -51,11 +51,11 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
 [logger_knapsack]
-level = WARN
+level = INFO
 handlers =
 qualname = knapsack
 
