--- a/KnapsackApp/app/build.gradle
+++ b/KnapsackApp/app/build.gradle
@@ -14,14 +14,14 @@ def getVersionName = { ->
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
 
         applicationId "org.quuux.knapsack"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
 
         versionCode getVersionCode()
         versionName getVersionName()
@@ -44,20 +44,20 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support:palette-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:27.0.1'
+    compile 'com.android.support:support-v4:27.0.1'
+    compile 'com.android.support:design:27.0.1'
+    compile 'com.android.support:cardview-v7:27.0.1'
+    compile 'com.android.support:recyclerview-v7:27.0.1'
+    compile 'com.android.support:palette-v7:27.0.1'
 
-    compile 'com.google.android.gms:play-services-auth:10.2.0'
-    compile 'com.google.android.gms:play-services-gcm:10.2.0'
-    compile 'com.google.android.gms:play-services-analytics:10.2.0'
+    compile 'com.google.android.gms:play-services-auth:11.6.0'
+    compile 'com.google.android.gms:play-services-gcm:11.6.0'
+    compile 'com.google.android.gms:play-services-analytics:11.6.0'
 
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.5.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.9.1'
     compile 'com.squareup:otto:1.3.8'
 
     compile 'jp.wasabeef:recyclerview-animators:1.1.2@aar'
@@ -75,4 +75,8 @@ tasks.whenTaskAdded { theTask ->
     if (theTask.name.equals("packageRelease")) {
         theTask.dependsOn "askForPasswords"
     }
+}
+
+repositories {
+    google()
 }
